Updated Website Information for Fall 2022
Updated footer and about me to reflect current year. Added business minor to education and added new skills. Created section for work experience and place template blocks to fill in later.

--- a/index.htm
+++ b/index.htm
@@ -35,8 +35,8 @@
 		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
-				An active computer science apprentice at Texas A&M University in my sophmore year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
-				Currently exploring different facets of mixed reality, but am looking to gain experience in the field of software engineering or virtual reality development.
+				An active computer science apprentice at Texas A&M University in my junior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
+				Currently exploring different facets of mixed reality, and am looking to gain experience in the field of software engineering or virtual reality development.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
@@ -57,6 +57,7 @@
 						Texas A&M University, College Station<br>
 						Class of 2024, Engineering Honors<br>
 						B.S. in Computer Science<br>
+						Minor in Business<br>
 						GPA: 3.9/4.0
 					</p>
 				</div>
@@ -65,10 +66,12 @@
 			<div class="coursework">
 				<ul>
 					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
+					<li>Computer Hardware</li>
+					<li>Programming Languages</li>
 					<li>Data Structures and Algorithms</li>
 					<li>Discrete Structures for Computing</li>
 					<li>Intro to Program Design Concepts</li>
-					<li>Computer Fluency</li>
+					<li>Compute Fluency</li>
 					<li>Multivariable and Vector Calculus</li>
 					<li>Linear Algebra</li>
 					<li>Physics I: Mechanics</li>
@@ -78,16 +81,69 @@
 		</div>
 	</div>
 	
-	
-	<!-- Projects -->
+	<!-- Experience -->
 	<div class="darkBox" style="padding-bottom:30px;">
+		<h1 class="heading" id="projects">Experience</h1>
+
+		<div class="project">
+			<div class="projectTitle">
+				<h3>General Motors</h3>
+				<p>June 2022 - August 2022</p>
+				<p>Virtual Reality Development Intern</p>
+				<a class="links" href="https://www.gm.com/" target="_blank">
+					<img style="margin:5px; margin-left: 0;" title="General Motor's site" src="images/GM_Logo.png" alt="Stutter Speak GitHub Link" width="45px" height="45px">
+				</a>
+		
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
+				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
+				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
+				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
+					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
+					<li>Coded in C++ & Blueprint Visual Scripiting</li>
+					<li>Published on the Oculus App Lap platform</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="project">
+			<div class="projectTitle">
+				<h3>Morphi</h3>
+				<p>Feburary 2022 - June 2022</p>
+				<p>Lead Web Developer Python Bot Developer</p>
+				
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
+				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
+				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
+				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
+					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
+					<li>Coded in C++ & Blueprint Visual Scripiting</li>
+					<li>Published on the Oculus App Lap platform</li>
+				</ul>
+			</div>
+		</div>
+
+		
+
+		
+	</div>
+
+	<!-- Projects -->
+	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
 		<div class="project">
 			<div class="projectTitle">
 				<h3>Stutter Speak</h3>
 				<p>May 2021 - August 2021</p>
-				<p>Co-developed</p>
+				<p>Lead Developer/Designer</p>
 				<a class="links" href="https://github.com/Jableman19/StutterSpeak" target="_blank">
 					<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Stutter Speak GitHub Link" width="40px" height="40px">
 				</a>
@@ -113,13 +169,13 @@
 			<div class="projectTitle">
 				<h3>Portofilo Website</h3>
 				<p>July 2021 - August 2021</p>
-				<p>Independent</p>
+				<p>Lead developer</p>
 				<a class="links" href="https://github.com/RobertEads/PortfolioWebsite" target="_blank">
 					<img style="margin:5px;" title="View on GitHub" src="images/GitHub_Logo_Dark.png" alt="Portofili Website GitHub Link" width="40px" height="40px">
 				</a>
 			</div>
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-wdith:525px;">Written on my own to begin learning web development, this website was coded mainly in HTML & CSS. Hosted with GitHub pages for easy maintainability
+				<p class="paragraphs" style="max-width:525px;">Written on my own to begin learning web development, this website was coded mainly in HTML & CSS. Hosted with GitHub pages for easy maintainability
 				and expandability.</p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
 				<ul style="margin:0; padding-left:1em; margin-bottom:25px;">
@@ -133,7 +189,7 @@
 			<div class="projectTitle">
 				<h3>Saxophone Simulator</h3>
 				<p>May 2021</p>
-				<p>Co-developed</p>
+				<p>Lead Developer/Designer</p>
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
@@ -152,24 +208,8 @@
 	
 	
 	<!-- Extracurricular -->
-	<div style="padding-bottom:30px;">
+	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="extracurricular">Extracurricular</h1>
-		<div class="project">
-			<div class="projectTitle">
-				<h3>STEM to Stocks</h3>
-				<p>Core Guild Member</p>
-				<p>August 2020 - Current</p>
-				<a class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
-					<img style="margin-top:5px;" title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
-				</a>
-			</div>
-			<div class="projectDescription" style="padding:0;">
-				<ul style="margin-top:5px;">
-					<li style="margin-bottom:10px;">Joined the STEM to Stocks Guild, designed to help build professional relationships and develop marketablility as an engineer in the buisness sector.</li>
-					<li style="margin-bottom:10px;">Communicated effectivly with 100+ guild members during biweekly meetings to expand my professional network and create mutually beneficial lasting connections.</li>
-				</ul>
-			</div>
-		</div>
 		
 		<div class="project">
 			<div class="projectTitle">
@@ -189,11 +229,28 @@
 			</div>
 			
 		</div>
+
+		<div class="project">
+			<div class="projectTitle">
+				<h3>STEM to Stocks</h3>
+				<p>Core Guild Member</p>
+				<p>August 2020 - August 2022</p>
+				<a class="links" href="https://mays.tamu.edu/ms-finance/stem-to-stocks-guild/" target="_blank">
+					<img style="margin-top:5px;" title="STEM to Stocks Guild Website" src="images/Stem to Stocks Logo.png" alt="STEM to Stocks Guild Website Link" width="150px" height="65px">
+				</a>
+			</div>
+			<div class="projectDescription" style="padding:0;">
+				<ul style="margin-top:5px;">
+					<li style="margin-bottom:10px;">Joined the STEM to Stocks Guild, designed to help build professional relationships and develop marketablility as an engineer in the buisness sector.</li>
+					<li style="margin-bottom:10px;">Communicated effectivly with 100+ guild members during biweekly meetings to expand my professional network and create mutually beneficial lasting connections.</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 	
 	
 	<!-- Skills -->
-	<div class="darkBox" style="padding-bottom:30px;">
+	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="skills">Skills</h1>
 		<div style="display:flex; justify-content:center; margin-top:10px;">
 			<ul style="list-style-type:none; padding:0;">
@@ -216,6 +273,13 @@
 					<span class="dot"></span>
 					<span class="dot"></span>
 					<span class="dot"></span>
+					<span class="dot"></span>
+				</li>
+				<li class="skill">
+					<span>Git</span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+					<span class="dot"></span>
 				</li>
 				<li class="skill">
 					<span>HTML</span>
@@ -228,6 +292,16 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
+					<span>React JS</span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+				</li>
+				<li class="skill">
+					<span>Linux Systems</span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+				</li>
+				<li class="skill">
 					<span>Unity Engine</span>
 					<span class="dot"></span>
 				</li>
@@ -236,7 +310,11 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>Linux Systems</span>
+					<span>PostgreSQL</span>
+					<span class="dot"></span>
+				</li>
+				<li class="skill">
+					<span>VMware vSphere/ESXI</span>
 					<span class="dot"></span>
 				</li>
 			</ul>
@@ -245,7 +323,7 @@
 	
 	
 	<!-- Footer -->
-	<div style="height:200px;">
+	<div class="darkBox" style="height:200px;">
 		<div class="footerMenu">
 			<ul>
 				<li><a href="#aboutMe">About Me</a></li>
@@ -267,7 +345,7 @@
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
 				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
-		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2021</i>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2022</i>
 	</div>
 	
 	
