Updated Experience and Resume
Added correct General Motors and Morphi experience and added updated resume

--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
 <!-- Home Page -->
 <div class="homePage">
 	<!-- About Me -->
-	<div class="darkBox" style="padding-bottom: 30px;">
+	<div style="padding-bottom: 30px;">
 		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
@@ -45,7 +45,7 @@
 	
 	
 	<!-- Education -->
-	<div style="padding-bottom:30px;">
+	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="education">Education</h1>
 		<div style="text-align:center;">
 			<div style="display:inline-block; vertical-align:top; text-align:center; padding-top:20px;">
@@ -82,7 +82,7 @@
 	</div>
 	
 	<!-- Experience -->
-	<div class="darkBox" style="padding-bottom:30px;">
+	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Experience</h1>
 
 		<div class="project">
@@ -96,36 +96,36 @@
 		
 			</div>
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
-				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
-				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
-				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
+				<p class="paragraphs" style="max-width:525px;"> Focused on virtual reality development using Unreal Engine 4, this experience included implementing client-requested features,
+					effectively communicating with multiple team members on a day-to-day basis, and efficiently refactoring large blocks of code to enable an easier transition from single-player development to a
+					multiplayer-focused creation process. Other responsibilities included coordinating and running monthly team game afternoons to encourage coworker camaraderie as well as scheduling  
+					time for personal development and growth.
+				   	</p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
 				<ul style="margin-top:0; padding-left:1em;">
-					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
-					<li>Coded in C++ & Blueprint Visual Scripiting</li>
-					<li>Published on the Oculus App Lap platform</li>
+					<li>Integrated newly created features, using Unreal Engine 4, into existing code base of over 14,000 files</li>
+					<li>Collaborated on a team of more than 18 members to design, update, and debug code base components</li>
+					<li>Refactored vital sections of single-player code base to enable development and implementation of multiplayer features</li>
 				</ul>
 			</div>
 		</div>
 
 		<div class="project">
 			<div class="projectTitle">
-				<h3>Morphi</h3>
+				<h3>Morphi Blockchain Consulting</h3>
 				<p>Feburary 2022 - June 2022</p>
 				<p>Lead Web Developer Python Bot Developer</p>
 				
 			</div>
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
-				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
-				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
-				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
+				<p class="paragraphs" style="max-width:525px;">Picked up as part time work during spring semester of 2022, responsibilities centered on daily communication with customers,
+					 creating custom requested websites on a project by project basis, and collaborativly coding with teammates to create, deploy, and manage custom python bots running connections to
+					 a MongoDB database. </p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
 				<ul style="margin-top:0; padding-left:1em;">
-					<li>Created in collaboration with licensed, certified speech-language pathologist</li>
-					<li>Coded in C++ & Blueprint Visual Scripiting</li>
-					<li>Published on the Oculus App Lap platform</li>
+					<li>Corresponded with clients directly to ensure product quality and meet constantly changing needs in a creative way</li>
+					<li>Spearheaded creation of client websites using React JS to meet customer requirements on a project by project basis</li>
+					<li>Advised team members on best coding practices and algorithm design for Python bot functionality</li>
 				</ul>
 			</div>
 		</div>
@@ -136,7 +136,7 @@
 	</div>
 
 	<!-- Projects -->
-	<div style="padding-bottom:30px;">
+	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
 		<div class="project">
@@ -208,7 +208,7 @@
 	
 	
 	<!-- Extracurricular -->
-	<div class="darkBox" style="padding-bottom:30px;">
+	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="extracurricular">Extracurricular</h1>
 		
 		<div class="project">
@@ -250,7 +250,7 @@
 	
 	
 	<!-- Skills -->
-	<div style="padding-bottom:30px;">
+	<div class="darkBox" style="padding-bottom:30px;">
 		<h1 class="heading" id="skills">Skills</h1>
 		<div style="display:flex; justify-content:center; margin-top:10px;">
 			<ul style="list-style-type:none; padding:0;">
@@ -323,7 +323,7 @@
 	
 	
 	<!-- Footer -->
-	<div class="darkBox" style="height:200px;">
+	<div style="height:200px;">
 		<div class="footerMenu">
 			<ul>
 				<li><a href="#aboutMe">About Me</a></li>
