About Me grammar fix

--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
 				An active computer science apprentice at Texas A&M University in my junior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
-				Currently exploring different facets of mixed reality, and am looking to gain experience in the field of software engineering or virtual reality development.
+				Currently exploring different facets of mixed reality and am looking to gain experience in the field of software engineering or virtual reality development.
 				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
