Jan 2023 Resume Update

--- a/index.htm
+++ b/index.htm
@@ -153,7 +153,7 @@
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;">Developed as a team of two in partnership with a licensed, certified speech-language pathologist, Stutter Speak is a VR application built in Unreal Engine 4 using a blend of C++ and Blueprint. 
-				   Designed to help those who stutter improve confindence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
+				   Designed to help those who stutter improve confidence in their public speaking ability, the application puts the user on stage in front of a digital audience to closely simulate the public speaking experience.
 				   By giving users the ability to self-track stuttering and rate themselves on different aspects of their speech, the application can then provide helpful feedback and graphical representations of data to show 
 				   progress over time. Stutter Speak is available for the Oculus Quest 2 via the Oculus App Lab store.</p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
