Updated for Fall 2023 Recruiting Season
Updated classes, experience, extracurricular, & skills

--- a/index.htm
+++ b/index.htm
@@ -35,9 +35,9 @@
 		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
-				An active computer science apprentice at Texas A&M University in my junior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
+				An active computer science apprentice at Texas A&M University in my senior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
 				Currently exploring different facets of mixed reality and am looking to gain experience in the field of software engineering or virtual reality development.
-				I whole heartly embrace Texas culture and am fond of running, playing basketball, and listening to music.
+				I whole heartly embrace Texas culture and am fond of country western dancing, mixed reality video games, and DIY computer building.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
@@ -66,16 +66,12 @@
 			<div class="coursework">
 				<ul>
 					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
-					<li>Computer Hardware</li>
-					<li>Programming Languages</li>
 					<li>Data Structures and Algorithms</li>
+                    <li>Computer Graphics</li>
+					<li>Analysis of Algorithms</li>
 					<li>Discrete Structures for Computing</li>
-					<li>Intro to Program Design Concepts</li>
-					<li>Compute Fluency</li>
-					<li>Multivariable and Vector Calculus</li>
-					<li>Linear Algebra</li>
-					<li>Physics I: Mechanics</li>
-					<li>Physics II: Electricity and Magnetism</li>
+					<li>Computer & Network Security</li>
+					<li>Computer Systems</li>
 				</ul>
 			</div>
 		</div>
@@ -84,6 +80,30 @@
 	<!-- Experience -->
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Experience</h1>
+
+        <div class="project">
+			<div class="projectTitle">
+				<h3>Cvent</h3>
+				<p>June 2023 - August 2023</p>
+				<p>Software Engineering Intern</p>
+				<a class="links" href="https://www.cvent.com/" target="_blank">
+					<img style="margin:5px; margin-left: 0;" title="General Motor's site" src="images/Cvent_Logo.png" alt="Stutter Speak GitHub Link" width="75px" height="20px">
+				</a>
+		
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;"> Tasked with increasing test coverage and logging for the front-end web application, the work consisted mostly of coding in TypeScript and React JS with some additional development in C++ & Blueprint using Unreal Engine 5.
+                    Working with an international team, inefficiencies in the application's loading progress and bugs in the logging code were discovered and quickly fixed to improve overall performance and observability. 
+                    In addition, Real User Monitoring (RUM) events, based on previously created logs, were used to visualize application statictis for better insights into where improvements could be made. 
+				   	</p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
+					<li>Incorporated newly written code to increase test coverage of React JS-based web application with Unreal Engine 5 backend</li>
+					<li>Interfaced with a team of developers based in 5 unique time zones to overcome challenges discovered during development</li>
+					<li>Visualized metrics in over a dozen graphs to increase observability and motivate a focus on boosting application performance</li>
+				</ul>
+			</div>
+		</div>
 
 		<div class="project">
 			<div class="projectTitle">
@@ -128,11 +148,7 @@
 					<li>Advised team members on best coding practices and algorithm design for Python bot functionality</li>
 				</ul>
 			</div>
-		</div>
-
-		
-
-		
+		</div>		
 	</div>
 
 	<!-- Projects -->
@@ -211,19 +227,38 @@
 	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="extracurricular">Extracurricular</h1>
 		
+        <div class="project">
+			<div class="projectTitle">
+				<h3>National Sttuering Association</h3>
+				<p>Chapter Co-Leader</p>
+				<p>June 2023 - Current</p>
+				<a class="links" href="https://westutter.org/" target="_blank">
+					<img title="Aggie Web Developers Website" src="images/NSA_Logo.png" alt="Aggie Web Developers Website Link" width="100px" height="100px">
+				</a>
+			</div>
+			<div class="projectDescription" style="padding:0;">
+				<ul style="margin-top:5px;">
+					<li style="margin-bottom:10px;">Assisted in developing activities and discussion topics for monthly chapter meetings. </li>
+					<li style="margin-bottom:10px;">Lead monthly local chapter meetings.</li>
+					<li style="margin-bottom:10px;">Communicated with chapter leaders nationwide to share ideas and increase outreach.</li>
+				</ul>
+			</div>
+			
+		</div>
+
 		<div class="project">
 			<div class="projectTitle">
 				<h3>Aggie Web Developers</h3>
 				<p>Club Member</p>
-				<p> August 2021 - Current</p>
+				<p> August 2021 - June 2023</p>
 				<a class="links" href="https://www.aggiedevelopers.com/" target="_blank">
 					<img title="Aggie Web Developers Website" src="images/Aggie_Web_Developers_Logo.jpg" alt="Aggie Web Developers Website Link" width="121px" height="75px">
 				</a>
 			</div>
 			<div class="projectDescription" style="padding:0;">
 				<ul style="margin-top:5px;">
-					<li style="margin-bottom:10px;">Participating in weekly meetings with team members leading to the fostering & growth of fellow developer’s ideas. </li>
-					<li style="margin-bottom:10px;">Contributing to the progression of projects and presenting original ideas in a clear and understandable manner.</li>
+					<li style="margin-bottom:10px;">Participated in weekly meetings with team members leading to the fostering & growth of fellow developer’s ideas. </li>
+					<li style="margin-bottom:10px;">Contributed to the progression of projects and presenting original ideas in a clear and understandable manner.</li>
 					<li style="margin-bottom:10px;">Collaborated with club memebers to ensure quality work and client satisfaction thoughout development process.</li>
 				</ul>
 			</div>
@@ -255,6 +290,13 @@
 		<div style="display:flex; justify-content:center; margin-top:10px;">
 			<ul style="list-style-type:none; padding:0;">
 				<li class="skill">
+					<span>C++</span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+				</li>
+                <li class="skill">
 					<span>Python</span>
 					<span class="dot"></span>
 					<span class="dot"></span>
@@ -262,14 +304,7 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>C++</span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>Unreal Engine</span>
+					<span>Unreal Engine 4</span>
 					<span class="dot"></span>
 					<span class="dot"></span>
 					<span class="dot"></span>
@@ -278,16 +313,6 @@
 				<li class="skill">
 					<span>Git</span>
 					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>HTML</span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>CSS</span>
 					<span class="dot"></span>
 					<span class="dot"></span>
 				</li>
@@ -302,19 +327,11 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>Unity Engine</span>
+					<span>Proxmox VE</span>
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>Java</span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>PostgreSQL</span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>VMware vSphere/ESXI</span>
+					<span>TrueNAS</span>
 					<span class="dot"></span>
 				</li>
 			</ul>
@@ -345,7 +362,7 @@
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
 				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
-		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2022</i>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2023</i>
 	</div>
 	
 	
