Updated experience bullets with new wording

--- a/index.htm
+++ b/index.htm
@@ -92,15 +92,15 @@
 		
 			</div>
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:525px;"> Tasked with increasing test coverage and logging for the front-end web application, the work consisted mostly of coding in TypeScript and React JS with some additional development in C++ & Blueprint using Unreal Engine 5.
+				<p class="paragraphs" style="max-width:525px;"> Tasked with increasing code coverage and logging for the front-end web application, the work consisted mostly of coding in TypeScript and React JS with some additional development in C++ & Blueprint using Unreal Engine 5.
                     Working with an international team, inefficiencies in the application's loading progress and bugs in the logging code were discovered and quickly fixed to improve overall performance and observability. 
                     In addition, Real User Monitoring (RUM) events, based on previously created logs, were used to visualize application statictis for better insights into where improvements could be made. 
 				   	</p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
 				<ul style="margin-top:0; padding-left:1em;">
-					<li>Incorporated newly written code to increase test coverage of React JS-based web application with Unreal Engine 5 backend</li>
-					<li>Interfaced with a team of developers based in 5 unique time zones to overcome challenges discovered during development</li>
-					<li>Visualized metrics in over a dozen graphs to increase observability and motivate a focus on boosting application performance</li>
+					<li>Expanded code coverage of React JS-based web application with Unreal Engine 5 backend using Jest methodologies</li>
+                    <li>Visualized metrics in over a dozen graphs using Datadog to increase observability and focus on boosting performance</li>
+					<li>Executed automated scripts to ensure seamless data migration between modeler and developer AWS servers</li>
 				</ul>
 			</div>
 		</div>
