Updated with professional email

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 		<div style="position:relative; width:fit-content; left:50%; transform:translateX(-50%); padding-bottom:30px;">
 				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Light.png" alt="Find me on GitHub" width="35px" height="35px"></a>
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Light.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
-				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Light.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
+				<a href="mailto:robert.f.eads@gmail.com" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Light.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
 		</div>
 		<a href="Robert_Eads_Resume.pdf" class="headerResume" id="resumeLink" target="_blank">Resume</a>
 	</div>
@@ -360,7 +360,7 @@
 				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Dark.png" alt="Find me on GitHub" width="40px" height="40px"></a>
 				<a href="https://www.instagram.com/robert.eads/" target="_blank" style="padding:15px;"><img src="images/Instagram_Logo_Dark.png" alt="Find me on Instagram" width="40px" height="40px"></a>
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
-				<a href="mailto:robert.f.eads@tamu.edu" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
+				<a href="mailto:robert.f.eads@gmail.com" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
 		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2023</i>
 	</div>
