--- a/index.htm
+++ b/index.htm
@@ -36,8 +36,8 @@
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
 				An active computer science apprentice at Texas A&M University in my senior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
-				Currently exploring different facets of mixed reality and am looking to gain experience in the field of software engineering or virtual reality development.
-				I whole heartly embrace Texas culture and am fond of country western dancing, mixed reality video games, and DIY computer building.
+				Currently exploring different facets of immersive technology and am looking to gain experience in the field of software engineering or virtual reality development.
+				I whole heartly embrace Texas culture and am fond of country western dancing,  virtual reality video games, and DIY computer & server building.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
@@ -68,9 +68,11 @@
 					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
 					<li>Data Structures and Algorithms</li>
                     <li>Computer Graphics</li>
+                    <li>Data Visualization</li>
 					<li>Analysis of Algorithms</li>
 					<li>Discrete Structures for Computing</li>
 					<li>Computer & Network Security</li>
+                    <li>Parallel Computing</li>
 					<li>Computer Systems</li>
 				</ul>
 			</div>
@@ -83,13 +85,35 @@
 
         <div class="project">
 			<div class="projectTitle">
+				<h3>Texas A&M University - VIVID Lab</h3>
+				<p>August 2023 - May 2024</p>
+				<p>Undergraduate Research Scholar</p>
+                <a class="links" href="https://vivid.tamids.tamu.edu/" target="_blank">
+					<img style="margin:5px; margin-left: -10px;" title="Texas A&M VIVID Lab website" src="images/TAM-LogoBox.png" alt="Texas A&M Logo" width="75px" height="75px">
+				</a>
+			</div>
+			<div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;"> 
+                    With the goal of reducing psychological distancing's effect on communities across the globe when it comes to inaction on climate change, and more specifically rising sea levels, this research project was conducted under the supervison of Dr. Ann McNamara in the
+                    Visceral Intersensory Visualization & Information Design (VIVD) Lab at Texas A&M University. Using mixed reality technology and Unreal Engine 5, environmental hazards related to rising sea levels were digitally recreated in the user's locale to evoke an emotional response and spur
+                    change in those communities that would otherwise have little motiviation to take action.
+                    </p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
+					<li>Conducted undergraduate research focused on combating climate change at a tier 1 research institution.</li>
+                    <li>Implemented program using Unreal Engine 5 in mixed reality to localize typical hazards of rising sea levels</li>
+				</ul>
+			</div>
+		</div>
+
+        <div class="project">
+			<div class="projectTitle">
 				<h3>Cvent</h3>
 				<p>June 2023 - August 2023</p>
 				<p>Software Engineering Intern</p>
 				<a class="links" href="https://www.cvent.com/" target="_blank">
-					<img style="margin:5px; margin-left: 0;" title="General Motor's site" src="images/Cvent_Logo.png" alt="Stutter Speak GitHub Link" width="75px" height="20px">
+					<img style="margin:5px; margin-left: 0;" title="Cvent's site" src="images/Cvent_Logo.png" alt="Cvent logo" width="75px" height="20px">
 				</a>
-		
 			</div>
 			<div class="projectDescription">
 				<p class="paragraphs" style="max-width:525px;"> Tasked with increasing code coverage and logging for the front-end web application, the work consisted mostly of coding in TypeScript and React JS with some additional development in C++ & Blueprint using Unreal Engine 5.
@@ -111,7 +135,7 @@
 				<p>June 2022 - August 2022</p>
 				<p>Virtual Reality Development Intern</p>
 				<a class="links" href="https://www.gm.com/" target="_blank">
-					<img style="margin:5px; margin-left: 0;" title="General Motor's site" src="images/GM_Logo.png" alt="Stutter Speak GitHub Link" width="45px" height="45px">
+					<img style="margin:5px; margin-left: 0;" title="General Motor's site" src="images/GM_Logo.png" alt="General Motors logo" width="45px" height="45px">
 				</a>
 		
 			</div>
