Minor spelling and grammar updates

--- a/index.htm
+++ b/index.htm
@@ -232,7 +232,7 @@
 				<p>Lead Developer/Designer</p>
 			</div>
 			<div class="projectDescription">
-				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my parnter Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
+				<p class="paragraphs" style="max-width:525px;">Created with the Unity game engine in C# alongside my partner Jonah, "Saxo Sim" was taken from concept to completion in just over one week.
 				Used as a simple way to gain familiarity with version control and coding in a team environment for my partner and I. 
 				Design and implimention of the overall UI as well as coding the note name display when a sound played was my responsibility.</p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
